# approvals

./: .backportrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
.github/: validate_customizations.py
.github/helper/: install.sh  install_dependencies.sh  site_config.json
.github/workflows/: backport.yml  ci.yml  integration_test.yml  lint.yaml  lint.yml  main.yml  pytest.yml  release.yaml
approvals/: boot.py  hooks.py  install.py  modules.txt  patches.txt
approvals/approvals/: api.py  permissions.py  test_setup.py  utils.py
approvals/approvals/custom/: customer_credit_limit.json  todo.json  workflow.json
approvals/approvals/doctype/approval_doctype/: approval_doctype.json  approval_doctype.py
approvals/approvals/doctype/document_approval/: document_approval.js  document_approval.json  document_approval.py  test_document_approval.py
approvals/approvals/doctype/document_approval_rule/: document_approval_rule.js  document_approval_rule.json  document_approval_rule.py  test_document_approval_rule.py
approvals/approvals/doctype/user_document_approval/: test_user_document_approval.py  (+3 more)
approvals/approvals/overrides/: permissions.py
approvals/config/: desktop.py  docs.py
approvals/docs/: index.md
approvals/fixtures/: email_template.json
approvals/patches/: add_pending_approval_email_template.py
approvals/public/js/: approvals.bundle.js  vite.config.ts
approvals/tests/: fixtures.py  setup.py  test_approval_workflow.py  test_non_workflow_approval.py  test_tmp.py
(+12 files in other folders)
